--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,10 +5,10 @@
         <item>Рылеева 18                                        </item>
         <item>Хлебозаводская 5                                  </item>
         <item>Троицкий тракт - Склад                            </item>
-        <item>Балашиха -Логистика (ответхранение, По-ШТУЧНОЕ)   </item>
+        <item>Балашиха - Логистика (ответхранение, По-ШТУЧНОЕ)  </item>
         <item>Омск склад                                        </item>
         <item>ЕКБ Березовский                                   </item>
-        <item>Наб.Челны склад                                   </item>
+        <item>Набережные Челны склад                            </item>
         <item>Новосибирск-Малыгина                              </item>
         <item>Нижний Новгород склад                             </item>
         <item>Пермь Журавлев Закамск                            </item>
@@ -18,6 +18,13 @@
         <item>Пермь Грузовой сервис                             </item>
         <item>Иркутск                                           </item>
         <item>Мирный 31 км.                                     </item>
+        <item>НабережныеЧелны ХЛЕБНЫЙ ПРОЕЗД                    </item>
+        <item>Нижний Новгород НОВЫЙ                             </item>
+        <item>Нижний Новгород - Торговый зал                    </item>
+        <item>Казань Новониколаевский                           </item>
+        <item>Казань - Торговый зал                             </item>
+        <item>Уфа                                               </item>
+        <item>Уфа - Торговый зал                                </item>
     </string-array>
     <integer-array name="time_interval">
         <item>1800</item>
