--- a/app/src/main/res/layout/goods_picking_fragment.xml
+++ b/app/src/main/res/layout/goods_picking_fragment.xml
@@ -135,4 +135,13 @@
             android:layout_margin="4dp"
             android:text="@string/goods_deficiency" />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/pbbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:visibility="gone" />
+
 </LinearLayout>
