--- a/app/src/main/res/layout/timing_fragment.xml
+++ b/app/src/main/res/layout/timing_fragment.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent"
             android:textSize="20sp"
             android:layout_weight="3"
-            android:text="@string/start_cell" />
+            android:text="@string/start_cell_label" />
         <EditText
             android:layout_width="0dp"
             android:layout_height="match_parent"
